--- a/TramUrWay.Android/Properties/AndroidManifest.xml
+++ b/TramUrWay.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="net.thedju.TramUrWay" android:versionCode="3" android:versionName="0.1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="net.thedju.TramUrWay" android:versionCode="5" android:versionName="0.1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="TramUrWay"></application>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<application android:label="TramUrWay" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
