--- a/TramUrWay.Android/Properties/AndroidManifest.xml
+++ b/TramUrWay.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,7 @@
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<application android:label="TramUrWay" android:icon="@mipmap/ic_launcher"></application>
+	<application android:label="TramUrWay" android:icon="@mipmap/ic_launcher">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBuG_9zGva_W0pKb-VxOOPOJwwlDzUjpCY" />
+	</application>
 </manifest>
