--- a/TramUrWay.Android/TramUrWay.Android.csproj
+++ b/TramUrWay.Android/TramUrWay.Android.csproj
@@ -118,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Activities\FavoritesFragment.cs" />
     <Compile Include="Activities\AboutActivity.cs" />
+    <Compile Include="Activities\MainFragment.cs" />
     <Compile Include="Activities\SplashScreenActivity.cs" />
     <Compile Include="Activities\MapFragment.cs" />
     <Compile Include="Activities\RoutesFragment.cs" />
@@ -293,9 +294,6 @@
     <AndroidResource Include="Resources\menu\StepWidgetMenu.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\xml\StepWidgetSearchable.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable\montpellier.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -357,6 +355,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\MapFragment.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\NoFavoritesFragment.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\menu\MainMenu.xml" />
   </ItemGroup>
   <Import Project="..\..\[Shared]\Android\Android.projitems" Label="Shared" />
   <Import Project="..\..\[Shared]\Utilities\Utilities.projitems" Label="Shared" />
