Fixed distance calculation. Prepared fastest route computation.

--- a/TramUrWay.Android/TramUrWay.Android.csproj
+++ b/TramUrWay.Android/TramUrWay.Android.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Adapters\StopsAdapter.cs" />
     <Compile Include="Model\Position.cs" />
     <Compile Include="Model\Curve.cs" />
+    <Compile Include="Model\Transport.cs" />
     <Compile Include="WebService.cs" />
     <Compile Include="Model\TimeTable.cs" />
     <Compile Include="Utils.cs" />
