--- a/TramUrWay.Baker/TramUrWay.Baker.csproj
+++ b/TramUrWay.Baker/TramUrWay.Baker.csproj
@@ -69,6 +69,9 @@
     <Compile Include="..\TramUrWay.Android\Model\TimeTable.cs">
       <Link>Model\TimeTable.cs</Link>
     </Compile>
+    <Compile Include="..\TramUrWay.Android\Model\Transport.cs">
+      <Link>Model\Transport.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
