--- a/TramUrWay.Android/TramUrWay.Android.csproj
+++ b/TramUrWay.Android/TramUrWay.Android.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Activities\Line\LineMapFragment.cs" />
     <Compile Include="Activities\Home\FavoritesFragment.cs" />
     <Compile Include="Activities\AboutActivity.cs" />
+    <Compile Include="Activities\BaseActivity.cs" />
     <Compile Include="Activities\NavigationActivity.cs" />
     <Compile Include="Activities\SplashScreenActivity.cs" />
     <Compile Include="Activities\MapFragment.cs" />
