--- a/TramUrWay.Dumper/TramUrWay.Dumper.csproj
+++ b/TramUrWay.Dumper/TramUrWay.Dumper.csproj
@@ -54,7 +54,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\..\[Shared]\Utilities\Utilities.projitems" Label="Shared" />
+  <Import Project="..\[Shared]\Utilities\Utilities.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
