--- a/TramUrWay.Baker/packages.config
+++ b/TramUrWay.Baker/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.101" targetFramework="net46" />
 </packages>
